Updated ffmpeg locator to do some more checks if it's the current executable Changed dependency to commons-logging-api