@@ -1,20 +1,9 @@
 /*
- * JAVE - A Java Audio/Video Encoder (based on FFMPEG)
- * 
- * Copyright (C) 2008-2009 Carlo Pelliccia (www.sauronsoftware.it)
- * 
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ * JAVE - A Java Audio/Video Encoder (based on FFMPEG) Copyright (C) 2008-2009 Carlo Pelliccia (www.sauronsoftware.it) This program is free software:
+ * you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either
+ * version 3 of the License, or (at your option) any later version. This program is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
+ * details. You should have received a copy of the GNU General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
 package it.sauronsoftware.jave;
 
@@ -24,6 +13,9 @@ import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
+import java.nio.file.attribute.BasicFileAttributes;
+import java.time.LocalDate;
+import java.time.ZoneId;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
@@ -46,6 +38,11 @@ public class DefaultFFMPEGLocator extends FFMPEGLocator {
     private static final int MY_EXE_VERSION = 2;
 
     /**
+     * Keep a LocalDate of current Jave2 Version
+     */
+    private static final LocalDate LOCAL_DATE = LocalDate.of(2018, 06, 21);
+
+    /**
      * The ffmpeg executable file path.
      */
     private final String path;
@@ -59,41 +56,72 @@ public class DefaultFFMPEGLocator extends FFMPEGLocator {
         boolean isWindows = os.contains("windows");
         boolean isMac = os.contains("mac");
 
-        // Temporary folder
-        File temporaryFolder = new File(System.getProperty("java.io.tmpdir"), "jave-"
-                + MY_EXE_VERSION);
-        if (!temporaryFolder.exists())
+        // Dir Folder
+        File dirFolder = new File(System.getProperty("java.io.tmpdir"), "jave-" + MY_EXE_VERSION);
+        if (!dirFolder.exists())
         {
-            temporaryFolder.mkdirs();
-            temporaryFolder.deleteOnExit();
+            dirFolder.mkdirs();
         }
-        // ffmpeg executable export on disk.
-        String suffix = isWindows ? ".exe" : "-osx";
+
+        // -----------------ffmpeg executable export on disk.-----------------------------
+        String suffix = isWindows ? ".exe" : (isMac ? "-osx" : "");
         String arch = System.getProperty("os.arch");
 
-        File exe = new File(temporaryFolder, "ffmpeg-" + arch + suffix);
-        if (!exe.exists())
+        //File
+        File ffmpegFile = new File(dirFolder, "ffmpeg-" + arch + suffix);
+        LOG.debug("Executable path: "+ffmpegFile.getAbsolutePath());
+
+        //Check the version of existing .exe file
+        if (ffmpegFile.exists())
         {
-            copyFile("ffmpeg-" + arch + suffix, exe);
+            try
+            {
+                //Retrieve the File Creation Date
+                BasicFileAttributes attributes = Files.readAttributes(ffmpegFile.toPath(), BasicFileAttributes.class);
+
+                //Convert to Java8 LocalDate
+                LocalDate date_file_created = attributes.creationTime().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
+
+                //Check if the file was created from a previous version of Jave2
+                if (date_file_created.isBefore(LOCAL_DATE))
+                {
+                    ffmpegFile.delete();
+                    LOG.info("ffmpegFile created before the latest update of library, deleted old file");
+                } else
+                {
+                    LOG.debug("ffmpegFile same version as in library");
+                }
+
+            } catch (IOException ex)
+            {
+                LOG.error("Error in ffmpegFile handling", ex);
+            }
         }
+
+        //If the file doesn't already exists
+        if (!ffmpegFile.exists())
+        {
+            copyFile("ffmpeg-" + arch + suffix, ffmpegFile);
+        }
+
         // Need a chmod?
         if (!isWindows)
         {
-            Runtime runtime = Runtime.getRuntime();
             try
             {
-                runtime.exec(new String[]
+                Runtime.getRuntime().exec(new String[]
                 {
-                    "/bin/chmod", "755",
-                    exe.getAbsolutePath()
+                    "/bin/chmod", "755", ffmpegFile.getAbsolutePath()
                 });
             } catch (IOException e)
             {
                 LOG.error(e);
             }
         }
-        // Ok.
-        this.path = exe.getAbsolutePath();
+
+        // Everything seems okay
+        path = ffmpegFile.getAbsolutePath();
+        LOG.debug("ffmpeg executable found: "+path);
     }
 
     @Override
@@ -106,9 +134,9 @@ public class DefaultFFMPEGLocator extends FFMPEGLocator {
      *
      * @param path The name of the bundled file.
      * @param dest The destination.
-     * @throws RuntimeException If aun unexpected error occurs.
+     * @throws RuntimeException If an unexpected error occurs.
      */
-    private void copyFile(String path, File dest) throws RuntimeException {
+    private void copyFile(String path, File dest) {
         copy(getClass().getResourceAsStream("native/" + path), dest.getAbsolutePath());
     }
 
